# RAG_Project

./: .env.docker  .env.local  .gitignore  README.md  docker-compose.yml
agent_finetune_lab/agent/: pyproject.toml
agent_finetune_lab/agent/config/: settings.py
agent_finetune_lab/agent/infra/: llm.py  llm_client.py
agent_finetune_lab/agent/scripts/: hello_echo_test.py  ping_llm.py  run_agent.py
agent_finetune_lab/agent/src/agent/: agent_test_v1.py  config.py  core.py  memory.py  policy.py  toolkit.py  types.py
agent_finetune_lab/agent/src/agent/tools/: calculator.py  hello_echo.py
rag/: requirements.txt
rag/app/app/: main.py
rag/chroma_db/: chroma.sqlite3
rag/sanity_title_hard/: results.csv
rag/tuning/run_balanced_dedup/: results.csv
rag/tuning/run_balanced_enriched/: results.csv
rag/tuning/sanity_seed/: results.csv
rag/tuning/tune_dedup_on/: results.csv
rag/tuning/tune_doc/: results.csv
rag/tuning/tune_docid/: results.csv
rag/tuning/tune_out/: results.csv
rag/tuning/tune_out 2025-09-09 1311/: results.csv
rag/tuning/tune_out2/: results.csv
rag/tuning/tune_out_all/: results.csv
rag/tuning/tune_out_v2/: results.v2.csv
rag/tuning/tune_out_v3_title/: results.v3.csv
rag/tuning/tune_push_dedup/: results.csv
rag/tuning/tune_push_dedup_dupstrong/: results.csv
rag/tuning/tune_seed/: results.csv
rag/tuning/tune_sens_lamk/: results.csv
rag_demo/: dockerfile
rag_demo/app/app/: main.py  (+1 more)
react-rag/: dockerfile  nginx.conf
react-rag/mongo-init/: init.js
react-rag/src/: App.tsx  main.tsx
spring/arin/: build.gradle  dockerfile
(+125 files in other folders)
