[project]
name = "agent-playground"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<0.29",
  "pydantic>=2.7,<3",
  "tenacity>=8.2,<9",
  "tiktoken>=0.7,<0.8",
  "python-dotenv>=1.0,<2",
  "orjson>=3.10,<4",
  "rich>=13,<14",
  # 플랫폼이 리눅스/맥이면 uvloop 유의미. 윈도우면 설치돼도 자동 미사용.
  "uvloop>=0.19; platform_system!='Windows'",
]

[project.optional-dependencies]
# LLM providers (필요한 것만 설치)
# openai = ["openai>=1.40,<2"]
# anthropic = ["anthropic>=0.37,<1"]
# google = ["google-generativeai>=0.7,<1"]
# mistral = ["mistralai>=1.2,<2"]
local = ["llama-cpp-python>=0.2.86,<0.3"]

# Embedding / Vector
embed = ["FlagEmbedding>=1.2,<2", "numpy>=1.26,<3"]
faiss = ["faiss-cpu>=1.8,<2"]  # GPU면 faiss-gpu로 교체

# Tracing/Report
trace = ["opentelemetry-sdk>=1.26,<2", "opentelemetry-exporter-otlp>=1.26,<2", "pandas>=2.2,<3"]

# Tests & Quality
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
  "black>=24,<25",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<4",
]

# Notebooks
nb = ["jupyterlab>=4,<5", "ipykernel>=6,<7", "matplotlib>=3.9,<4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
